VTK-3321 - overflow:hidden on outer iframe to fix iOS overflowing bug

--- a/src/main/resources/web/themes/default/default.css
+++ b/src/main/resources/web/themes/default/default.css
@@ -2163,13 +2163,13 @@ body#vrtx-preview.js #app-content #main {
 .mobile body#vrtx-preview #app-content #contents #previewIframeWrapper iframe#previewIframe {
   width: 328px !important;
   height: 494px !important;
+  overflow: hidden !important;
   background-color: #fff;
   display: block;
   margin: -623px auto 0;
   border: none;
   position: relative;
   z-index: 1;
-  overflow: hidden;
 }
 
 .mobile.horizontal body#vrtx-preview #app-content #contents #previewIframeWrapper iframe#previewIframe {
